Added command '/reloadquestconfig'. Not tested because I can't download the newest version of Bukkit.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -23,6 +23,8 @@ commands:
            Example: /uquest - shows all of the commands for uQuest
   reloadquests:
     description: Reloads the quests from the quests file.
+  reloadquestconfig:
+    description: Reloads the config file.
 #  test:
 #    description: test
 #    usage: |
