--- a/Default_Files/config.yml
+++ b/Default_Files/config.yml
@@ -17,6 +17,8 @@ Database:
 
 #### PluginSupport:
 PluginSupport:
+    #The number of seconds after enabling to check for plugin linkage. Make this larger if your having issues with uQuest detecting plugins.
+    pluginTimerCheck: 5
     #Set to true if you want to have support for these plugins.
     usePermissions: true
     #Options (copy exactly): iConomy, BOSEconomy, Essentials
